--- a/testwebapp/testwebapp/Views/Shared/_Layout.cshtml
+++ b/testwebapp/testwebapp/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+			<p>hornoodcc added this</p>
         </footer>
     </div>
 
