--- a/testwebapp/testwebapp/Views/Shared/_Layout.cshtml
+++ b/testwebapp/testwebapp/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
 			<p>hornoodcc added this</p>
+            <p>A change from visual studio using git tools</p>
 
         </footer>
     </div>
