--- a/testwebapp/testwebapp/Views/Home/Index.cshtml
+++ b/testwebapp/testwebapp/Views/Home/Index.cshtml
@@ -27,6 +27,6 @@
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-		<p>some more text on the page</P>
+		<p>some more text on the page blaa blaa P>
     </div>
 </div>
